--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-5.93MB/s(Youtube:不良林), server: relayjp2.vip.www.klrxyru.cn, port: 1452, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
-  - {name: 🇨🇳 台湾-10.09MB/s(Youtube:不良林), server: 61.222.202.140, port: 33792, type: vmess, uuid: e55cd182-01b0-4fb7-a510-363701a491c5, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 61.222.202.140}}
-  - {name: 🇨🇳 中国-483.4KB/s(Youtube:不良林), server: aiaus1.game.www.klrxyru.cn, port: 1420, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
-  - {name: 🇨🇳 中国-1.00MB/s(Youtube:不良林), server: aiajp1.game.www.klrxyru.cn, port: 1460, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
-  - {name: 🇰🇷 韩国-5.46MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-1.41MB/s(Youtube:不良林), server: 150.230.99.46, port: 22222, type: vmess, uuid: e6c55d36-022c-4ebc-b9c2-e1220a7184f4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.31MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-5.70MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-1.27MB/s(Youtube:不良林), server: 89.31.126.171, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-1.42MB/s(Youtube:不良林), server: usfree2.jiantian.xyz, port: 32462, type: trojan, password: cb5e2135-4d64-4454-be98-5bae4f2618d1, sni: usfree2.jiantian.xyz, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-9.74MB/s(Youtube:不良林), server: 152.67.223.187, port: 13774, type: vmess, uuid: 5da35e16-0af7-47cc-ed73-269824ccb1a2, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-255.2KB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 50858, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-460.8KB/s(Youtube:不良林), server: relayjp3.vip.www.klrxyru.cn, port: 1453, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
+  - {name: 🇦🇺 澳大利亚-2.77MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-3.70MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-3.39MB/s(Youtube:不良林), server: 85.208.108.20, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
+  - {name: 🇺🇸 美国-314.1KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 塞浦路斯-356.1KB/s(Youtube:不良林), server: 213.169.137.221, port: 989, type: ss, cipher: aes-256-cfb, password: f8f7aCzcPKbsF8p3}
+  - {name: 🇷🇺 俄罗斯联邦-1.79MB/s(Youtube:不良林), server: 45.144.176.135, port: 3004, type: ss, cipher: aes-256-cfb, password: 3682oiuvefwwmbc1475}
+  - {name: 🇷🇺 俄罗斯联邦-1.77MB/s(Youtube:不良林), server: 45.144.176.135, port: 3003, type: ss, cipher: aes-256-cfb, password: werty33588761qwfdees}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-5.93MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-10.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-483.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.00MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-5.46MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-9.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-255.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-460.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.77MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-314.1KB/s(Youtube:不良林)
+      - 塞浦路斯-356.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.79MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.77MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-5.93MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-10.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-483.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.00MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-5.46MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-9.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-255.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-460.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.77MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-314.1KB/s(Youtube:不良林)
+      - 塞浦路斯-356.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.79MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.77MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-5.93MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-10.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-483.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.00MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-5.46MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-9.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-255.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-460.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.77MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-314.1KB/s(Youtube:不良林)
+      - 塞浦路斯-356.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.79MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.77MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-10.09MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-5.93MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-10.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-483.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.00MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-5.46MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-9.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-255.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-460.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.77MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-314.1KB/s(Youtube:不良林)
+      - 塞浦路斯-356.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.79MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.77MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-5.93MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-10.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-483.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.00MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-5.46MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-9.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-255.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-460.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.77MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-314.1KB/s(Youtube:不良林)
+      - 塞浦路斯-356.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.79MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.77MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-5.93MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-10.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-483.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.00MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-5.46MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-9.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-255.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-460.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.77MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-314.1KB/s(Youtube:不良林)
+      - 塞浦路斯-356.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.79MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.77MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-5.93MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-10.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-483.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.00MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-5.46MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-9.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-255.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-460.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.77MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-314.1KB/s(Youtube:不良林)
+      - 塞浦路斯-356.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.79MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.77MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
